# Raft

./: CMakeLists.txt  main.cpp  node.h
app/: CMakeLists.txt  main.cpp
include/: timer.h
src/: CMakeLists.txt  timer.cpp
util/: CMakeLists.txt  timer.cpp
